--- a/src/theme/bootstrap.overrides.scss
+++ b/src/theme/bootstrap.overrides.scss
@@ -11,6 +11,10 @@
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #33e0ff;
+  color: #777;
   background-color: transparent;
+
+  &:hover {
+    color: #333;
+  }
 }
